feat: add scraper to scraping definition
